[package]
name = "rustycap"
authors = ["BaxoPlenty"]
description = "Official CapBypass wrapper for Rust"
version = "1.2.1"
edition = "2021"
repository = "https://github.com/BaxoPlenty/rustycap"
license-file = "LICENSE"
readme = "README.md"
keywords = ["capbypass", "captcha", "arkoselabs"]

[dependencies]
base64 = { version = "0.22.0", optional = true }
imghdr = { version = "0.7.0", optional = true }
tokio = { version = "1.36.0" }
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
anyhow = "1.0.80"
serde_json = "1.0.114"

[features]
image = ["dep:base64", "dep:imghdr"]
